# Item-selection-

bestItemProblem/: C4ContainerDiagram.puml
bestItemProblem/code/: CMakeLists.txt
bestItemProblem/code/src/: dataTypes.h  itemSelector.cpp  itemSelector.h  itemSelectorTest.cpp  main.cpp  utils.h
bestItemProblem/code/src/catch2/: catch.hpp
